// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders correctly 1`] = `
<DocumentFragment>
  <div
    class="SearchResults"
  >
    <div
      class="test"
    >
      <img
        alt="mockAlt"
        class="card-photo"
        data-testid="image-id"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResults returns thumbnail images of search query 1`] = `
<div
  className="SearchResults"
>
  <div
    className="test"
  >
    <img
      alt="mockAlt"
      className="card-photo"
      data-testid="image-id"
    />
  </div>
</div>
`;
